tests/should_fail/garbage_token.nds
-- Invalid character should produce a clean lexer error.
set x to 1 @ 2
